// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default 1`] = `
<span
  className="list-style-toggle"
  onClick={[Function]}
  title="Toggle list style"
>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`(2) Toggled 1`] = `
<span
  className="list-style-toggle toggled"
  onClick={[Function]}
  title="Toggle list style"
>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
      fill="currentColor"
    />
  </svg>
</span>
`;
